# TinyDeps

./: .gitignore  Cargo.toml  flake.nix
.git_hooks/: pre-push
autolock/: Cargo.toml
autolock/src/: cli.rs  lib.rs  main.rs  message.rs
itj_daemon/: Cargo.toml
itj_daemon/src/: client.rs  lib.rs  message.rs  server.rs
itj_daemon/src/ipc/: base.rs
itj_daemon/src/ipc/base_impl/: nc.rs
itj_daemon_hello_world/: Cargo.toml
itj_daemon_hello_world/src/: cli.rs  lib.rs  main.rs  message.rs  processor.rs  server.rs
itj_tiny_deps/: Cargo.toml
itj_tiny_deps/src/: client.rs  lib.rs  server.rs
itj_tiny_deps/src/daemon/: client.rs  dpk.rs  mod.rs  server.rs
itj_tiny_deps/src/errors/: error_smart.rs  mod.rs
itj_tiny_deps/src/ipc/: base.rs  mod.rs
itj_tiny_deps/src/ipc/base_impl/: mod.rs  nc.rs
itj_tiny_deps/src/random/: from_file.rs  mod.rs  random_trait.rs
itj_tiny_deps/tests/: random.rs
